--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
         </select>
 
 
-        <textarea class="form-control" [(ngModel)]="questionText"></textarea>
+        <textarea class="form-control" [(ngModel)]="questionText" (ngModelChange)="processNaturalLanguage()"></textarea>
       </div>
 
 
@@ -22,7 +22,7 @@
     <div class="col-sm-6">
       <div class="form-group">
         <h2>Response from service</h2>
-        <alert *ngIf="!!questionText" type="info">{{questionText}}</alert>
+        <alert *ngIf="!!resultText" type="info">{{resultText}}</alert>
       </div>
 
     </div>
