--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,17 @@
     {{title}}!
   </h1>
 
+  <p>
+    Demo as detailed in <a href='https://trello.com/c/KLGWHDcQ'>this</a> Trello card (access required).
+  </p>
+  <p>Just as
+    <a href='https://azure.microsoft.com/en-au/services/cognitive-services/language-understanding-intelligent-service/'
+      demo parses text to extract the meaning, then intention of this page is to allow us to test extraction of meaning from
+      free text.></p>
+  <p>
+    It is currently not wired up to any services, but the intent will be to wire it up to third party APIs to test their performance.
+  </p>
+
   <div class="row">
     <div class="col-sm-6">
 
