--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
     <div class="col-sm-6">
       <div class="form-group">
         <h2>Response from service</h2>
-        <alert *ngIf="!!resultText" type="info">{{resultText}}</alert>
+        <pre class='alert alert-info'>{{resultText}}</pre>
       </div>
 
     </div>
