--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,29 +7,25 @@
     Demo as detailed in <a href='https://trello.com/c/KLGWHDcQ'>this</a> Trello card (access required).
   </p>
   <p>Just as
-    <a href='https://azure.microsoft.com/en-au/services/cognitive-services/language-understanding-intelligent-service/'>this</a> demo
-      parses text to extract the meaning, then intention of this page is to allow us to test extraction of meaning from free
-      text.
-    </p>
-  <p>
-    It is currently not wired up to any services, but the intent will be to wire it up to third party APIs to test their performance.
+    <a href='https://azure.microsoft.com/en-au/services/cognitive-services/language-understanding-intelligent-service/'>this</a>    demo parses text to extract the meaning, then intention of this page is to allow us to test extraction of meaning from
+    free text.
   </p>
-
+  <p>The service is currently pointing to <strong>{{activeLanguageService.Name}}</strong>.</p>
   <div class="row">
     <div class="col-sm-6">
 
       <div class="form-group">
 
-        <label>Choose your question from list or type:</label>
+        <label>Choose your question from list...</label>
         <select class="form-control" [(ngModel)]="selectedQuestion" (ngModelChange)="setQuestion()">
           <option *ngFor="let question of questions" [ngValue]="question">{{question.question}}</option>
         </select>
 
-
+     <label>... or type your own.</label>
         <textarea class="form-control" [(ngModel)]="questionText" (ngModelChange)="textChanged()"></textarea>
       </div>
 
-    <button type="button" class="btn btn-primary" (click)="executeQuery(questionText)">Execute Query</button>
+      <button type="button" class="btn btn-primary" (click)="executeQuery(questionText)">Execute Query</button>
     </div>
     <div class="col-sm-6">
       <div class="form-group">
