--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
-hello
+<p>
+My thoughts are that we could have two routes, one to the demo page and one to the 'test' page. That way it could all be one project. 
+I guess that we don't need to have this landing page with the links on it...      
+</p>
+<p>
 <a uiSref="nlt" uiSrefActive="active">NLT</a>
 <a uiSref="static" uiSrefActive="active">Static</a>
+</p>
 <br/>
 <ui-view></ui-view>
